# avaluma-livekit-plugin

./: .gitignore  API-SERVER.md  README.md  RESEARCH.md  pyproject.toml
livekit/plugins/avaluma/: __init__.py
src/avaluma_livekit_plugin/: __init__.py  avatar.py  legacy_avatar.py  log.py  resources.py  utils.py  version.py
src/avaluma_livekit_plugin/local/: __init__.py  avatar_cpp_wrapper.py  avatar_runner.py  bin_downloader.py  resources.py  video_generator.py
