[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Avaluma-LiveKit-Plugin"
version = "0.1.3"
description = "LiveKit Plugin for using LiveKit Agent with Avaluma Avatar. "
authors = [
    { name = "Avaluma.ai", email = "dev@avaluma.ai" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
"livekit>=0.17.0",
"livekit-agents>=1.2.0",
"aiohttp>=3.9.0",
"numpy>=1.24.0",
]

[project.urls]
Homepage = "https://avaluma.ai"
